<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.ContentFragment">

    <com.example.viewpager.view.NoScrollViewPager
        android:id="@+id/vp_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </com.example.viewpager.view.NoScrollViewPager>

    <RadioGroup
        android:id="@+id/rgGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttom"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_home"
            style="@style/BottomTabStyle"
            android:drawableTop="@drawable/btn_tab_home_selector"
            android:text="@string/homepage" />

        <RadioButton
            android:id="@+id/rb_news"
            style="@style/BottomTabStyle"
            android:drawableTop="@drawable/btn_tab_news_selector"
            android:text="@string/NewsCenter" />

        <RadioButton
            android:id="@+id/rb_smartService"
            style="@style/BottomTabStyle"
            android:drawableTop="@drawable/btn_tab_service_selector"
            android:text="@string/SmartService" />

        <RadioButton
            android:id="@+id/rb_government"
            style="@style/BottomTabStyle"
            android:drawableTop="@drawable/btn_tab_government_selector"
            android:text="@string/Government" />

        <RadioButton
            android:id="@+id/rb_setting"
            style="@style/BottomTabStyle"
            android:drawableTop="@drawable/btn_tab_setting_selector"
            android:text="@string/Setting" />
    </RadioGroup>
</LinearLayout>
